fix dark mode && pagination && grid && styles

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,7 +8,7 @@
     scroll-behavior: smooth;
 }
 
-.fa-solid{
+#toggler i{
     line-height: 2rem;
 }
 
